se agrego el front para que muestre la cantidad, que viene tomada de la DB. Tengo que encontrar la forma de hacer que ese mismo campo aumente en 1 cada vez q se repite el elemento

--- a/views/UserLogin/partials/listaProductosCarrito.pug
+++ b/views/UserLogin/partials/listaProductosCarrito.pug
@@ -9,6 +9,7 @@ h2(style="color:crimson;") Listado de Compra
                     th Precio
                     th Stock
                     th Foto
+                    th Cantidad
                 each val in productos
                     tr
                         td= val.name
@@ -17,6 +18,7 @@ h2(style="color:crimson;") Listado de Compra
                         td= val.price
                         td= val.stock
                         td= val.photo
+                        td= val.cant
                         td
         div
             form(onsubmit=`return emptyCart()`)
