logre hacer andar las cantidades de productos en el carro

--- a/views/UserLogin/partials/listaProductos.pug
+++ b/views/UserLogin/partials/listaProductos.pug
@@ -23,7 +23,7 @@ h2(style="color:crimson;") Listado de productos
                         td= val.stock
                         td= val.photo
                         td
-                            form(onsubmit=`return añadirCarrito("${val._id}")`)
+                            form(onsubmit=`return añadirCarrito("${val._id}", "${val.code}")`)
                                 button.btn.btn-success.btn-sm(type='submit') Añadir al carrito
     else
         h3(class="alert alert-danger") No products
